syntax = "proto3";

package worker.database.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option java_multiple_files = true;
option java_package = "com.google.worker.database.v1";
option go_package = "github.com/10Narratives/distgo-db/pkg/proto/worker/database/v1;dbv1";

service TransactionService {
  rpc Begin(BeginRequest) returns (BeginResponse) {
    option (google.api.http) = {
      post: "/v1alpha1/transactions:begin"
      body: "*"
    };
  }

  rpc Commit(CommitRequest) returns (CommitResponse) {
    option (google.api.http) = {
      post: "/v1alpha1/transactions:commit"
      body: "transaction_id"
    };
  }

  rpc Rollback(RollbackRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/transactions:rollback"
      body: "transaction_id"
    };
  }
}

message BeginRequest {
  string description = 1 [(validate.rules).string.max_len = 512];
}

message BeginResponse {
  string transaction_id = 1 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  google.protobuf.Timestamp started_at = 2;
}

message CommitRequest {
  string transaction_id = 1 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CommitResponse {
  google.protobuf.Timestamp committed_at = 1;
}

message RollbackRequest {
  string transaction_id = 1 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}